# exergy-lab

./: .env.example  .env.production.example  .gitignore  BACKEND_FIXES_REPORT.md  CLAUDE.md  DATA_AND_ASSUMPTIONS.md  GOOGLE_CLOUD_SETUP.md  METHODOLOGY_VALIDATION.md  MODAL_SETUP.md  PROJECT_SUMMARY.md  README copy.md  README.md  SOURCE_AUDIT.md  THERMODYNAMIC_ACCURACY_ANALYSIS.md  THERMODYNAMIC_VALIDATION_METHODOLOGY.md  discovery-fs_1766176146148_eped10.json  discovery-fs_1766176770021_njff64.json  docker-compose.yml  package-lock.json  package.json  setup.sh  vercel.json
.claude/: architecture.md  breakthrough-engine.md  design-system.md  development.md  implementation-tracker.md
.claude/browser-qa/: BROWSER-QA.md
.claude/context/: ai-agents.md  browser-qa.md  discovery-engine.md  experiments.md  index.md  search-system.md  simulation-engine.md  tea-module.md  (+1 more)
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  20241213_0001_001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: auth.py  data_upload.py  discovery.py  energy.py  exergy.py  health.py  payments.py  projects.py  tea.py
backend/app/core/: config.py  database.py  tiers.py
backend/app/crud/: __init__.py  base.py  discovery.py  project.py  subscription.py  user.py
backend/app/data/energy/: demand_growth_projections.json  efficiency_factors_corrected.json  energy_potential_by_region.json  energy_projections_v4.json  exergy_services_timeseries.json  regional_energy_timeseries.json  sectoral_energy_breakdown_v2.json  useful_energy_timeseries.json
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  discovery.py  project.py  subscription.py  user.py
backend/app/schemas/: __init__.py  discovery.py  project.py  subscription.py  user.py
backend/app/services/: __init__.py  ai_service.py  dataset_hub.py  discovery_engine.py  energy_data.py  literature_service.py  materials_api.py  patent_service.py  report_generator.py
backend/app/tea/: __init__.py  calculator.py  exergy_analysis.py
backend/app/templates/reports/: discovery_report.html  exergy_report.html  tea_report.html
backend/src/: config.py  database.py  main.py  models.py  schemas.py
backend/src/agents/core/: classifier.py  literature_agent.py
backend/src/agents/workflows/: solar_pv_workflow.py
backend/src/api/: chat.py
backend/src/data/classifier/: training_examples.json  validation_set.json
backend/src/services/: cache_service.py
backend/src/tools/literature/: arxiv_search.py
backend/src/tools/simulations/: bandgap_model.py
backend/tests/: __init__.py  conftest.py  test_dataset_hub.py  test_discovery_engine.py  test_exergy_analyzer.py  test_literature_service.py  test_patent_service.py  test_tea_calculator.py
computer-use-orchestrator/: .env.example  browser-agent.js  package-lock.json  package.json
docs/: API_REFERENCE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  USER_GUIDE.md
exergy-lab/: .env.example  ACTIVITY_TRACKING.md  README.md  STATUS_AND_SETUP.md  TESTING_AI.md  THEME_STANDARDS.md  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/: .env.example  .eslintrc.json  next.config.js  package-lock.json  package.json  tailwind.config.ts
modal-simulations/: README.md  alchemi_materials.py  deploy.sh  gpu_accelerated.py  nemotron_embeddings.py  nemotron_reranker.py  physicsnemo_cfd.py  requirements.txt  simulation_runner.py
scripts/: test_classifier_accuracy.py
(+775 files in other folders)
